[package]
name = "express-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
flate2 = "1.0.25"
